src/App.scss
$primary-color: #ed4e0f;

@import "animate.css";
@import "~loaders.css/src/animations/ball-clip-rotate-multiple.scss";
@import "bootstrap/dist/css/bootstrap.min.css";
.loader-active {
  // background-color: black;
  display: block;
  position: absolute;
  left: 0;
  right: 0;
  margin: auto;
  top: 0;
  bottom: 0;
  width: 60px;
  height: 60px;
}

.loader-page {
  text-align: center;
  display: flex;
  background-color: rgb(237, 237, 237);
  justify-content: center;
  align-items: center;
  width: 100%;
  height: 100vh;
  position: fixed;
  top: 0;
  left: 0;
  bottom: 0;
  right: 0;
  z-index: 9999;
  animation: fadeOut 0.5s 3s forwards;
  .logo-load {
    text-transform: uppercase;
    position: absolute;
    font-size: 40px;
    top: 35%;
    color: #ed4e0f;
    left: 50%;
    transform: translateX(-50%) translateY(-50%);
    // animation: backInDown 1s;
  }
  .load {
    position: absolute;
    top: 40%;
    left: 50%;
    transform: translate(-50%, -50%);
  }
}

.container {
  padding-left: 15px;
  padding-right: 15px;
  margin-left: auto;
  margin-right: auto;
}
/* Small  */
@media (min-width: 768px) {
  .container {
    width: 750px;
  }
}
/* Medium */
@media (min-width: 992px) {
  .container {
    width: 970px;
  }
}
/* Large  */
@media (min-width: 1200px) {
  .container {
    width: 1170px;
  }
}

// Dark mode
.dark {
  background-color: #222;

  header {
    background-color: #222;
    transition: 0.3s;
  }

  .home-pg .landing .side-bar.side1 .list-side li a {
    color: #fff !important;

    &.sign-btn {
      color: #ed4e0f !important;
    }
  }

  .line-ads h4 {
    color: #ed4e0f;
  }

  h2,
  p,
  h4,
  span {
    color: white;
  }

  .footer {
    border-top: 1px solid rgb(68, 66, 66);
  }

  .login-pg  {
    color: #fff !important;

    .btn {
      background-color: #ed4e0f;
      font-weight: 500;
    }
  }
}

